updates to lecture 1

--- a/references.bib
+++ b/references.bib
@@ -64,3 +64,170 @@ address = {New York, NY, USA},
 url = {https://dl.acm.org/doi/proceedings/10.1145/3702336},
 doi = {10.1145/3702336}
 }
+
+
+@book{Norman:2013,
+	address = {New York, NY, USA},
+	author = {Donald A. Norman},
+	publisher = {Basic Books},
+	title = {he Design of Everyday Things: Revised and Expanded Edition},
+	year = {1988}}
+
+@article{mccarthy-wright:2004,
+author = {McCarthy, John and Wright, Peter},
+title = {Technology as experience},
+year = {2004},
+issue_date = {September + October 2004},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {11},
+number = {5},
+issn = {1072-5520},
+doi = {10.1145/1015530.1015549},
+journal = {Interactions},
+month = sep,
+pages = {42--43},
+numpages = {2}
+}
+
+@inproceedings{Raffaele:2016,
+author="Raffaele, Rennan
+and Carvalho, Breno
+and Lins, Anthony
+and Marques, Luiz
+and Soares, Marcelo M{\'a}rcio",
+editor="Marcus, Aaron",
+title="Digital Game for Teaching and Learning: An Analysis of Usability and Experience of Educational Games",
+booktitle="Design, User Experience, and Usability: Novel User Experiences ",
+year="2016",
+publisher="Springer International Publishing",
+address="Cham",
+pages="303--310",
+isbn="978-3-319-40355-7"
+}
+
+@article{wobbrock-contributions-HCI,
+author = {Wobbrock, Jacob O. and Kientz, Julie A.},
+title = {Research contributions in human-computer interaction},
+year = {2016},
+issue_date = {May + June 2016},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {23},
+number = {3},
+issn = {1072-5520},
+url = {https://doi.org/10.1145/2907069},
+doi = {10.1145/2907069},
+journal = {Interactions},
+month = apr,
+pages = {38--44},
+numpages = {7}
+}
+
+@article{gaver-cultural-probes,
+author = {Gaver, Bill and Dunne, Tony and Pacenti, Elena},
+title = {Design: Cultural probes},
+year = {1999},
+issue_date = {Jan./Feb. 1999},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {6},
+number = {1},
+issn = {1072-5520},
+url = {https://doi-org.virtual.anu.edu.au/10.1145/291224.291235},
+doi = {10.1145/291224.291235},
+journal = {Interactions},
+month = jan,
+pages = {21–29},
+numpages = {9}
+}
+
+@inproceedings{rogers-never-old:2014,
+author = {Rogers, Yvonne and Paay, Jeni and Brereton, Margot and Vaisutis, Kate L. and Marsden, Gary and Vetere, Frank},
+title = {Never too old: engaging retired people inventing the future with MaKey MaKey},
+year = {2014},
+isbn = {9781450324731},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi-org.virtual.anu.edu.au/10.1145/2556288.2557184},
+doi = {10.1145/2556288.2557184},
+abstract = {Within HCI, aging is often viewed in terms of designing assistive technologies to improve the lives of older people, such as those who are suffering from frailty or memory loss. Our research adopts a very different approach, reframing the relationship in terms of wisdom, creativity and invention. We ran a series of workshops where groups of retirees, aged between early 60s and late 80s, used the MaKey MaKey inventor's toolkit. We asked them to think about inventing the future and suggest ideas for new technologies. Our findings showed that they not only rose to the challenge but also mastered the technology, collaborated intensely together while using it and freely and at length discussed their own, their family's and others' relationship with technology. We discuss the value of empowering people in this way and consider what else could be invented to enable more people to be involved in the design and use of creative technologies.},
+booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+pages = {3913–3922},
+numpages = {10},
+keywords = {toolkits, retired people, makey makey, invention, future technology, creativity, aging},
+location = {Toronto, Ontario, Canada},
+series = {CHI '14}
+}
+
+@article{gentner-anti-mac:1996,
+author = {Gentner, Don and Nielsen, Jakob},
+title = {The Anti-Mac interface},
+year = {1996},
+issue_date = {Aug. 1996},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {39},
+number = {8},
+issn = {0001-0782},
+url = {https://doi.org/10.1145/232014.232032},
+doi = {10.1145/232014.232032},
+journal = {Commun. ACM},
+month = aug,
+pages = {70–82},
+numpages = {13}
+}
+
+@inproceedings{chai-cooking:2017,
+author = {Chai, Min Zhen and Soro, Alessandro and Roe, Paul and Brereton, Margot},
+title = {Cooking Together at a Distance: Sustain Connectedness for Long Distance Families},
+year = {2017},
+isbn = {9781450346566},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi-org.virtual.anu.edu.au/10.1145/3027063.3053183},
+doi = {10.1145/3027063.3053183},
+abstract = {We describe the design, implementation and evaluation of the Performance Apron and Talking Bottle, two novel devices that aim to enhance and share the experience of cooking together at a distance. The devices support the exchange of voice message and cooking sounds through an augmented bottle controlled through a cooking apron embedded with wearable technology. This design responds to the messy, performative and communicative needs while cooking in the kitchen by interweaving cooking and communication.},
+booktitle = {Proceedings of the 2017 CHI Conference Extended Abstracts on Human Factors in Computing Systems},
+pages = {2437–2444},
+numpages = {8},
+keywords = {asynchronous, connection at a distance, cooking, family, intimate communication, mess, messaging},
+location = {Denver, Colorado, USA},
+series = {CHI EA '17}
+}
+
+@inproceedings{finn-design-for-aging:2016,
+author = {Finn, Kate and Johnson, Jeff},
+title = {Designing for an Aging Population: Toward Universal Design},
+year = {2016},
+isbn = {9781450340823},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2851581.2856669},
+doi = {10.1145/2851581.2856669},
+abstract = {This course describes age-related factors that affect ability to use the Web, and presents Web design guidelines that reflect the capabilities, usage patterns, and preferences of older Web users. The course also explains the value of testing websites on older adults.},
+booktitle = {Proceedings of the 2016 CHI Conference Extended Abstracts on Human Factors in Computing Systems},
+pages = {1011–1012},
+numpages = {2},
+keywords = {accessibility, demographics, design, design guidelines, elderly, elders, human-computer interaction, interaction, older adults, older users, seniors, universal design, user experience, user interface, user-centered design, web design, website},
+location = {San Jose, California, USA},
+series = {CHI EA '16}
+}
+
+@article{carroll-fun:2004,
+author = {Carroll, John M.},
+title = {Beyond fun},
+year = {2004},
+issue_date = {September + October 2004},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {11},
+number = {5},
+issn = {1072-5520},
+url = {https://doi.org/10.1145/1015530.1015547},
+doi = {10.1145/1015530.1015547},
+journal = {Interactions},
+month = sep,
+pages = {38–40},
+numpages = {3}
+}
