cleaned up tutorial 1

--- a/references.bib
+++ b/references.bib
@@ -231,3 +231,12 @@ month = sep,
 pages = {38–40},
 numpages = {3}
 }
+
+@misc{reflection-toolkit-driscoll,
+  url = {https://reflection.ed.ac.uk/reflectors-toolkit/reflecting-on-experience/what-so-what-now-what},
+  title = {Reflection Toolkit: What? So what? Now what?}, 
+  author = {Gavin McCabe and Tobias Thejll-Madsen},
+  publisher = {The University of Edinburgh},
+  year = {2024},
+  note = {Reflection Toolkit website}
+}
