created a tutorial template to explain how to make them

--- a/references.bib
+++ b/references.bib
@@ -70,7 +70,7 @@ doi = {10.1145/3702336}
 	address = {New York, NY, USA},
 	author = {Donald A. Norman},
 	publisher = {Basic Books},
-	title = {he Design of Everyday Things: Revised and Expanded Edition},
+	title = {The Design of Everyday Things: Revised and Expanded Edition},
 	year = {2013}}
 
 @article{mccarthy-wright:2004,
