putting design background and requirements into lecture 2

--- a/references.bib
+++ b/references.bib
@@ -240,3 +240,48 @@ numpages = {3}
   year = {2024},
   note = {Reflection Toolkit website}
 }
+
+@misc{double-diamond-model,
+  url = {https://www.designcouncil.org.uk/our-resources/the-double-diamond/},
+  title = {The Double Diamond: A universally accepted depiction of the design process}, 
+  author = {{Design Council}},
+  year = {2025},
+  note = {Design Council website}
+}
+
+@inproceedings{je-elevate:2021,
+author = {Je, Seungwoo and Lim, Hyunseung and Moon, Kongpyung and Teng, Shan-Yuan and Brooks, Jas and Lopes, Pedro and Bianchi, Andrea},
+title = {Elevate: A Walkable Pin-Array for Large Shape-Changing Terrains},
+year = {2021},
+isbn = {9781450380966},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3411764.3445454},
+doi = {10.1145/3411764.3445454},
+abstract = {Current head-mounted displays enable users to explore virtual worlds by simply walking through them (i.e., real-walking VR). This led researchers to create haptic displays that can also simulate different types of elevation shapes. However, existing shape-changing floors are limited by their tabletop scale or the coarse resolution of the terrains they can display due to the limited number of actuators and low vertical resolution. To tackle this challenge, we introduce Elevate, a dynamic and walkable pin-array floor on which users can experience not only large variations in shapes but also the details of the underlying terrain. Our system achieves this by packing 1200 pins arranged on a 1.80 \texttimes{} 0.60m platform, in which each pin can be actuated to one of ten height levels (resolution: 15mm/level). To demonstrate its applicability, we present our haptic floor combined with four walkable applications and a user study that reported increased realism and enjoyment.},
+booktitle = {Proceedings of the 2021 CHI Conference on Human Factors in Computing Systems},
+articleno = {127},
+numpages = {11},
+keywords = {VR, Shape Changing Display, Haptic Floor},
+location = {Yokohama, Japan},
+series = {CHI '21}
+}
+
+@article{gould-usability:1985,
+author = {Gould, John D. and Lewis, Clayton},
+title = {Designing for usability:  key principles and what designers think},
+year = {1985},
+issue_date = {March 1985},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {28},
+number = {3},
+issn = {0001-0782},
+url = {https://doi.org/10.1145/3166.3170},
+doi = {10.1145/3166.3170},
+abstract = {This article is both theoretical and empirical. Theoretically, it describes three principles of system design which we believe must be followed to produce a useful and easy to use computer system. These principles are: early and continual focus on users; empirical measurement of usage; and iterative design whereby the system (simulated, prototype, and real) is modified, tested, modified again, tested again, and the cycle is repeated again and again. This approach is contrasted to other principled design approaches, for example, get it right the first time, reliance on design guidelines. Empirically, the article presents data which show that our design principles are not always intuitive to designers; identifies the arguments which designers often offer for not using these principles—and answers them; and provides an example in which our principles have been used successfully.},
+journal = {Commun. ACM},
+month = mar,
+pages = {300–311},
+numpages = {12}
+}
