updates to design lecture

--- a/references.bib
+++ b/references.bib
@@ -279,9 +279,36 @@ number = {3},
 issn = {0001-0782},
 url = {https://doi.org/10.1145/3166.3170},
 doi = {10.1145/3166.3170},
-abstract = {This article is both theoretical and empirical. Theoretically, it describes three principles of system design which we believe must be followed to produce a useful and easy to use computer system. These principles are: early and continual focus on users; empirical measurement of usage; and iterative design whereby the system (simulated, prototype, and real) is modified, tested, modified again, tested again, and the cycle is repeated again and again. This approach is contrasted to other principled design approaches, for example, get it right the first time, reliance on design guidelines. Empirically, the article presents data which show that our design principles are not always intuitive to designers; identifies the arguments which designers often offer for not using these principles—and answers them; and provides an example in which our principles have been used successfully.},
 journal = {Commun. ACM},
 month = mar,
 pages = {300–311},
 numpages = {12}
+}
+
+@book{contextual-design:1997,
+author = {Beyer, Hugh and Holtzblatt, Karen},
+title = {Contextual Design: Defining Customer-Centered Systems},
+year = {1997},
+isbn = {9780080503042},
+publisher = {Morgan Kaufmann Publishers Inc.},
+address = {San Francisco, CA, USA},
+doi = {0.5555/2821566},
+url = {https://dl.acm.org/doi/book/10.5555/2821566}
+}
+
+@article{hallewell2022deriving,
+  title={Deriving Personas to Inform HMI Design for Future Autonomous Taxis: A Case Study on User Requirement Elicitation.},
+  author={Hallewell, Madeline J and Hughes, Nancy and Large, David R and Harvey, Catherine and Springthorpe, James and Burnett, Gary},
+  journal={Journal of Usability Studies},
+  volume={17},
+  number={2},
+  year={2022}
+}
+
+@inproceedings{choi2024scenario,
+  title={Scenario-Based Design to Envision How GenAI Can Support Sound Design Practices},
+  author={Choi, Minsik and Andres, Josh and Hunter, Alexander and Martin, Charles Patrick},
+  booktitle={Proceedings of the 36th Australian Computer-Human Interaction Conference},
+  year={2024},
+  url={https://yorkcla.github.io/assets/pdf/choi2024scenario.pdf}
 }
