updated scenario tutorial

--- a/references.bib
+++ b/references.bib
@@ -312,3 +312,27 @@ url = {https://dl.acm.org/doi/book/10.5555/2821566}
   year={2024},
   url={https://yorkcla.github.io/assets/pdf/choi2024scenario.pdf}
 }
+
+@misc{carden-personas:2023,
+  author = {Frances Carden},
+  howpublished = {Digital.gov website},
+  title = {Personas: learn how to discover your audience, understand them, and pivot to address their needs},
+  year = {2023},
+  url = {https://digital.gov/2023/05/19/personas-learn-how-to-discover-your-audience-understand-them-and-pivot-to-address-their-needs}
+}
+
+@misc{persona-creation-nsw:2025,
+  author = {{NSW Government}},
+  howpublished = {Digital NSW Website},
+  title = {Persona Creation},
+  year = {2025},
+  url = {https://www.digital.nsw.gov.au/delivery/digital-service-toolkit/resources/user-research-methods/persona-creation#anchor-persona-details},
+}
+
+@misc{dam-personas:2025,
+  author = {Rikke Friis Dam and Teo Yu Siang},
+  howpublished = {Interaction Design Foundation Website},
+  title = {Personas - A Simple Introduction},
+  year = {2025},
+  url = {https://www.interaction-design.org/literature/article/personas-why-and-how-you-should-use-them}
+}
