--- a/references.bib
+++ b/references.bib
@@ -336,3 +336,11 @@ url = {https://dl.acm.org/doi/book/10.5555/2821566}
   year = {2025},
   url = {https://www.interaction-design.org/literature/article/personas-why-and-how-you-should-use-them}
 }
+
+@inproceedings{dix2006bad,
+  title={Why bad ideas are a good idea},
+  author={Dix, Alan and Ormerod, Tom and Twidale, Michael and Sas, Corina and Silva, Paula Alexandra and McKnight, Lorna},
+  booktitle={HCI Educators Workshop 2006},
+  year={2006},
+  url={https://alandix.com/academic/papers/HCIed2006-badideas/HCIED2006-badideas-CRC-v2.pdf}
+}
