Update lecture content and references for clarity and completeness

--- a/references.bib
+++ b/references.bib
@@ -344,3 +344,20 @@ url = {https://dl.acm.org/doi/book/10.5555/2821566}
   year={2006},
   url={https://alandix.com/academic/papers/HCIed2006-badideas/HCIED2006-badideas-CRC-v2.pdf}
 }
+
+@book{eysenck-brysbaert:2023,
+  author = {Eysenck, Michael W. and Brysbaert, Marc},
+  editor = {},
+  publisher = {Routledge},
+  title = {Fundamentals of Cognition (4th ed.)},
+  year = {2023},
+  doi = {10.4324/9781003384694},
+}
+
+@book{suchman:1987,
+author = {Suchman, Lucy A.}, 
+title = {Plans and situated actions: the problem of human-machine communication}, 
+year = {1987}, 
+isbn = {0521331374}, 
+publisher = {Cambridge University Press},
+}
