--- a/references.bib
+++ b/references.bib
@@ -361,3 +361,131 @@ year = {1987},
 isbn = {0521331374}, 
 publisher = {Cambridge University Press},
 }
+
+@book{saffer-designing:2010,
+  title={Designing for Interaction: Creating Smart Applications and Clever Devices},
+  author={Dan Saffer},
+  year={2010},
+  publisher={New Riders Press, Indianapolis},
+  url = {https://anu.primo.exlibrisgroup.com/permalink/61ANU_INST/1alil8h/alma991026813681207631},
+}
+
+@article{lim-prototypes:2008,
+author = {Lim, Youn-Kyung and Stolterman, Erik and Tenenberg, Josh},
+title = {The anatomy of prototypes: Prototypes as filters, prototypes as manifestations of design ideas},
+year = {2008},
+issue_date = {July 2008},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {15},
+number = {2},
+issn = {1073-0516},
+url = {https://doi-org.virtual.anu.edu.au/10.1145/1375761.1375762},
+doi = {10.1145/1375761.1375762},
+journal = {ACM Trans. Comput.-Hum. Interact.},
+month = jul,
+articleno = {7},
+numpages = {27},
+}
+
+@incollection{erickson-metaphors:1995,
+title = {Working with Interface Metaphors},
+editor = {Ronald M. Baecker and Jonathan Grudin and William A.S. Buxton and Saul Greenberg},
+booktitle = {Readings in Human-Computer Interaction},
+publisher = {Morgan Kaufmann},
+pages = {147-151},
+year = {1995},
+series = {Interactive Technologies},
+isbn = {978-0-08-051574-8},
+doi = {https://doi.org/10.1016/B978-0-08-051574-8.50018-2},
+url = {https://www.sciencedirect.com/science/article/pii/B9780080515748500182},
+author = {Thomas D. Erickson},
+}
+
+@misc{dam-prototyping:2020,
+  author = {Rikke Friis Dam and Teo Yu Siang},
+  howpublished = {Interaction Design Foundation website},
+  title = {Design Thinking: Get Started with Prototyping},
+  year = {2020},
+  url = {https://www.interaction-design.org/literature/article/design-thinking-get-started-with-prototyping}
+}
+
+@misc{design-thinking-bootleg:2018,
+  author = {Scott Doorley and Sarah Holcomb and Perry Klebahn and Kathryn Segovia and Jeremy Utley},
+  howpublished = {Stanford dSchool website},
+  title = {Design Thinking Bootleg},
+  year = {2018},
+  url = {https://dschool.stanford.edu/tools/design-thinking-bootleg}
+}
+
+@book{buxton-sketching:2007,
+  author = {Bill Buxton},
+  publisher = {Morgan Kaufmann Publishers Inc.}, 
+  address = {San Francisco, CA, USA},
+  title = {Sketching User Experiences: Getting the Design Right and the Right Design},
+  year = {2007}
+}
+
+@inproceedings{cheng-language-culture:2017,
+author = {Cheng, Alan and Yang, Lei and Andersen, Erik},
+title = {Teaching Language and Culture with a Virtual Reality Game},
+year = {2017},
+isbn = {9781450346559},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi-org.virtual.anu.edu.au/10.1145/3025453.3025857},
+doi = {10.1145/3025453.3025857},
+abstract = {Many people want to learn a language but find it difficult to stay engaged. Ideally, we would have language learning tools that can make language learning more enjoyable by simulating immersion in a foreign language environment. Therefore, we adapted Crystallize, a 3D video game for learning Japanese, so that it can be played in virtual reality with the Oculus Rift. Specifically, we explored whether we could leverage virtual reality technology to teach embodied cultural interaction, such as bowing in Japanese greetings. To evaluate the impact of our virtual reality game designs, we conducted a formative user study with 68 participants. We present results showing that the virtual reality design trained players how and when to bow, and that it increased participants' sense of involvement in Japanese culture. Our results suggest that virtual reality technology provides an opportunity to leverage culturally-relevant physical interaction, which can enhance the design of language learning technology and virtual reality games.},
+booktitle = {Proceedings of the 2017 CHI Conference on Human Factors in Computing Systems},
+pages = {541--549},
+numpages = {9},
+keywords = {language learning, video games, virtual reality},
+location = {Denver, Colorado, USA},
+series = {CHI '17}
+}
+
+@inproceedings{hooper-french-kitchen:2012,
+author = {Hooper, Clare J. and Preston, Anne and Balaam, Madeline and Seedhouse, Paul and Jackson, Daniel and Pham, Cuong and Ladha, Cassim and Ladha, Karim and Pl\"{o}tz, Thomas and Olivier, Patrick},
+title = {The french kitchen: task-based learning in an instrumented kitchen},
+year = {2012},
+isbn = {9781450312240},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi-org.virtual.anu.edu.au/10.1145/2370216.2370246},
+doi = {10.1145/2370216.2370246},
+abstract = {Ubiquitous computing technologies have traditionally striven to augment objects and the environment with sensing capabilities to enable them to respond appropriately to the needs of the individuals in the environment. This paper considers how such technologies might be harnessed to support language learning, and specifically Task-Based Learning (TBL). Task-Based Learning (TBL) involves doing meaningful tasks in a foreign language, emphasising the language's use in practice. TBL is seen as a highly engaging and motivating approach to learning a language, but is difficult to do in the classroom. Here, learners typically engage in activities that only simulate 'real-world' tasks, and as such only rehearse language use, rather than applying the language in practice. In this paper, we explore how an instrumented, context-aware environment whose design is grounded in pedagogical principles can support TBL. We present the French Kitchen, an instrumented kitchen for English speakers who are learning French, and describe a 46-participant evaluation of the kitchen. Based on the evaluation, we provide a set of design recommendations for those building instrumented systems for TBL.},
+booktitle = {Proceedings of the 2012 ACM Conference on Ubiquitous Computing},
+pages = {193--202},
+numpages = {10},
+keywords = {building-people interaction, instrumented environment, situated interaction, task-based learning},
+location = {Pittsburgh, Pennsylvania},
+series = {UbiComp '12}
+}
+
+@inproceedings{chen-chatbot:2020,
+author = {Chen, Zhifa and Lu, Yichen and Nieminen, Mika P. and Lucero, Andr\'{e}s},
+title = {Creating a Chatbot for and with Migrants: Chatbot Personality Drives Co-Design Activities},
+year = {2020},
+isbn = {9781450369749},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi-org.virtual.anu.edu.au/10.1145/3357236.3395495},
+doi = {10.1145/3357236.3395495},
+abstract = {Information portals are usually created to support the integration of migrants into a host country. However, the information-seeking process can be exhausting, cumbersome and even confusing for migrants as they must cope with time-consuming information overload while searching desired information from lists of documents. Chatbots are easy-to-use, natural, and intuitive, and thus could support information-seeking. There is a lack of research that engages and empowers migrants and other stakeholders as co-design participants in chatbot development. We explored how migrants can be empowered in designing a chatbot that supports their social integration. Using a co-design approach, we conducted a series of activities with migrants and other stakeholders (i.e., online questionnaires, empathy probes, surveys, and co-design workshops) to first understand their expectations regarding chatbots, and then co-design a personality-driven chatbot. We found that chatbot personality can drive co-designing a chatbot as design goals, design directions, and design criteria.},
+booktitle = {Proceedings of the 2020 ACM Designing Interactive Systems Conference},
+pages = {219–230},
+numpages = {12},
+keywords = {social integration, probes, personality, migrants, generative toolkit, conversation design, co-design, chatbot, avatar},
+location = {Eindhoven, Netherlands},
+series = {DIS '20}
+}
+
+@book{rogers-hci-theory:2012,
+  author = {Yvonne Rogers},
+  editor = {},
+  publisher = {Morgan and Claypool Publishers},
+  title = {HCI Theory: Classical, Modern, and Contemporary},
+  year = {2012},
+  url = {https://doi.org/10.2200/S00418ED1V01Y201205HCI014},
+  doi = {10.2200/S00418ED1V01Y201205HCI014},
+}
