--- a/references.bib
+++ b/references.bib
@@ -489,3 +489,10 @@ series = {DIS '20}
   url = {https://doi.org/10.2200/S00418ED1V01Y201205HCI014},
   doi = {10.2200/S00418ED1V01Y201205HCI014},
 }
+@misc{google-crazy8,
+  author = {Google},
+  howpublished = {Google Design Sprint Kit webpage},
+  title = {Crazy 8's},
+  year = {2020},
+  url = {https://designsprintkit.withgoogle.com/methodology/phase3-sketch/crazy-8s}
+}
