--- a/references.bib
+++ b/references.bib
@@ -496,3 +496,17 @@ series = {DIS '20}
   year = {2020},
   url = {https://designsprintkit.withgoogle.com/methodology/phase3-sketch/crazy-8s}
 }
+
+@inbook{adiwangsa-charades:2025,
+author = {Adiwangsa, Michelle and Bransky, Karla and Wood, Erika and Sweetser, Penny},
+title = {A Game of ChARades: Using Role-Playing and Mimicry with and without Tangible Objects to Ideate Immersive Augmented Reality Experiences},
+year = {2025},
+isbn = {9798400714863},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3715668.3736382},
+abstract = {Using tangible objects for immersive augmented reality (AR) experiences offers various benefits, such as providing a physical means of interacting with virtual objects and enhancing the functionality of everyday objects. However, designing AR experiences with tangible objects presents unique challenges, particularly due to the diverse physical properties that can influence user interactions. In this provocation, we explore effective approaches for ideating such AR experiences, by designing two exergames intended for AR head-mounted displays (HMDs). We found that role-playing and mimicry, both with and without tangible objects, provide valuable benefits in the design of such experiences. Building on this insight, we introduce ChARades, an iterative and playful gamestorming technique that incorporates role-playing and mimicry in both forms, to ideate immersive AR experiences involving tangible objects.},
+booktitle = {Companion Publication of the 2025 ACM Designing Interactive Systems Conference},
+pages = {440–445},
+numpages = {6}
+}
