--- a/references.bib
+++ b/references.bib
@@ -510,3 +510,13 @@ booktitle = {Companion Publication of the 2025 ACM Designing Interactive Systems
 pages = {440–445},
 numpages = {6}
 }
+
+@ARTICLE{martin-empi:2020,
+AUTHOR={Martin, Charles Patrick  and Glette, Kyrre  and Nygaard, Tønnes Frostad  and Torresen, Jim },
+TITLE={Understanding Musical Predictions With an Embodied Interface for Musical Machine Learning},
+JOURNAL={Frontiers in Artificial Intelligence},
+VOLUME={Volume 3 - 2020},
+YEAR={2020},
+URL={https://www.frontiersin.org/journals/artificial-intelligence/articles/10.3389/frai.2020.00006},
+DOI={10.3389/frai.2020.00006}
+}
