updated prototyping tutorial

--- a/references.bib
+++ b/references.bib
@@ -520,3 +520,22 @@ YEAR={2020},
 URL={https://www.frontiersin.org/journals/artificial-intelligence/articles/10.3389/frai.2020.00006},
 DOI={10.3389/frai.2020.00006}
 }
+
+@article{porcheron-wizard:2020,
+author = {Porcheron, Martin and Fischer, Joel E. and Reeves, Stuart},
+title = {Pulling Back the Curtain on the Wizards of Oz},
+year = {2021},
+issue_date = {December 2020},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {4},
+number = {CSCW3},
+url = {https://doi.org/10.1145/3432942},
+doi = {10.1145/3432942},
+abstract = {The Wizard of Oz method is an increasingly common practice in HCI and CSCW studies as part of iterative design processes for interactive systems. Instead of designing a fully-fledged system, the 'technical work' of key system components is completed by human operators yet presented to study participants as if computed by a machine. However, little is known about how Wizard of Oz studies are interactionally and collaboratively achieved in situ by researchers and participants. By adopting an ethnomethodological perspective, we analyse our use of the method in studies with a voice-controlled vacuum robot and two researchers present. We present data that reveals how such studies are organised and presented to participants and unpack the coordinated orchestration work that unfolds 'behind the scenes' to complete the study. We examine how the researchers attend to participant requests and technical breakdowns, and discuss the performative, collaborative, and methodological nature of their work. We conclude by offering insights from our application of the approach to others in the HCI and CSCW communities for using the method.},
+journal = {Proc. ACM Hum.-Comput. Interact.},
+month = jan,
+articleno = {243},
+numpages = {22},
+keywords = {woz, vuis, voice interfaces, robots, research practice, natural language interfaces, methodology, ethnomethodology, ethnography, cscw, coordination, collaboration}
+}
