--- a/references.bib
+++ b/references.bib
@@ -539,3 +539,29 @@ articleno = {243},
 numpages = {22},
 keywords = {woz, vuis, voice interfaces, robots, research practice, natural language interfaces, methodology, ethnomethodology, ethnography, cscw, coordination, collaboration}
 }
+
+@inproceedings{webber-oranguatans:2020,
+author = {Webber, Sarah and Carter, Marcus and Smith, Wally and Vetere, Frank},
+title = {Co-Designing with Orangutans: Enhancing the Design of Enrichment for Animals},
+year = {2020},
+isbn = {9781450369749},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3357236.3395559},
+doi = {10.1145/3357236.3395559},
+abstract = {In creating digital technologies for animals, designers often seek to deploy and adapt human-centred techniques of interaction design. A significant challenge lies in enabling animals to play an active and generative role in the design process. This is of particular concern when the primary design objective is to address the behavioural and psychological needs of animal users. In collaboration with orangutans and human stakeholders at a zoo, we conducted co-design to create an interactive installation to enhance the orangutans' wellbeing. This paper presents the design journey undertaken and reflects on the challenges of designing with animals in a complex real-world setting. From this, we propose ways in which interaction design methods can be better adapted to working with animals by integrating qualitative and quantitative techniques drawn from the animal sciences. These reflections and proposals are relevant to researchers and practitioners investigating the design of animal-centred digital technologies.},
+booktitle = {Proceedings of the 2020 ACM Designing Interactive Systems Conference},
+pages = {1713–1725},
+numpages = {13},
+keywords = {zoos, prototyping, iterative design, co-design, animal-centred design},
+location = {Eindhoven, Netherlands},
+series = {DIS '20}
+}
+
+@website{budd-web-design:2007,
+  author= {Budd, Andy},
+  title= {Heuristics for Modern WEb Application Development},
+  year= {2007},
+  url= {https://andybudd.com/archives/2007/01/heuristics_for_modern_web_application_de},
+  note= {[Blog post on Andy Budd's website]}
+}
