--- a/references.bib
+++ b/references.bib
@@ -565,3 +565,104 @@ series = {DIS '20}
   url= {https://andybudd.com/archives/2007/01/heuristics_for_modern_web_application_de},
   note= {[Blog post on Andy Budd's website]}
 }
+
+@inproceedings{soro-older-users:2016,
+author = {Soro, Alessandro and Brereton, Margot and Roe, Paul},
+title = {Towards an Analysis Framework of Technology Habituation by Older Users},
+year = {2016},
+isbn = {9781450340311},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2901790.2901806},
+doi = {10.1145/2901790.2901806},
+abstract = {Smart everyday objects could support the wellbeing, independent living and social connectedness of ageing people, but their successful adoption depends upon them fitting with their skills, values and goals. Many technologies fail in this respect. Our work is aimed at designs that engage older people by building on their individual affective attachment to habituated objects and leveraging, from a participatory design perspective, the creative process through which people continuously adapt their homes and tools to their own lifestyle. We contribute a novel analytic framework based on an analysis of related research on appropriation and habituated objects. It identifies steps in appropriation from inspection to performance and habituation. We test this framework with the preliminary testing of an augmented habituated object, a messaging kettle. While only used in one home so far, its daily use has provoked many thoughts, scenarios and projections about use by friends, both practical, utopian and dystopian.},
+booktitle = {Proceedings of the 2016 ACM Conference on Designing Interactive Systems},
+pages = {1021–1033},
+numpages = {13},
+keywords = {things, smart, routines, rituals, positive ageing, older users, messaging, kettle, habituation, framework, appropriation, analysis, adoption, acceptance},
+location = {Brisbane, QLD, Australia},
+series = {DIS '16}
+}
+
+@inproceedings{ambe-individuation:2017,
+author = {Ambe, Aloha Hufana and Brereton, Margot and Soro, Alessandro and Roe, Paul},
+title = {Technology Individuation: The Foibles of Augmented Everyday Objects},
+year = {2017},
+isbn = {9781450346559},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3025453.3025770},
+doi = {10.1145/3025453.3025770},
+abstract = {This paper presents the concept of technology individuation and explores its role in design. Individuation expresses how, over time, a technology becomes personal and intimate, unique in purpose, orchestrated in place, and how people eventually come to rely on it to sustain connection with others. We articulate this concept as a critical vantage point for designing augmented everyday objects and the Internet of Things. Individuation foregrounds aspects of habituation, routines and arrangements that through everyday practices reveal unique meaning, reflect self-identity and support agency.The concept is illustrated through three long term case studies of technology in use, involving tangible and embodied interaction with devices that afford communication, monitoring, and awareness in the home setting. The cases are analysed using Hornecker and Buur's Tangible Interaction Framework. We further extend upon this framework to better reveal the role played by personal values, history of use, and arrangements, as they develop over time in the home setting, in shaping tangible and embodied interaction with individuated technologies.},
+booktitle = {Proceedings of the 2017 CHI Conference on Human Factors in Computing Systems},
+pages = {6632–6644},
+numpages = {13},
+keywords = {communication, connection, design, embodied, framework, habituation, individuation, internet of things, objects, situated., smart, tangible, things},
+location = {Denver, Colorado, USA},
+series = {CHI '17}
+}
+
+@inproceedings{ehn-participation:2008,
+author = {Ehn, Pelle},
+title = {Participation in design things},
+year = {2008},
+isbn = {9780981856100},
+publisher = {Indiana University},
+address = {USA},
+abstract = {This paper discusses the design of things. This is done in an attempt to conceptually explore some of the political and practical challenges to participatory design today. Which things, and which participants? The perspective is strategic and conceptual. Two approaches are in focus, participatory design (designing for use before use) and meta-design (designing for design after design). With this framing the challenge for professional design to participate in public controversial things is considered.},
+booktitle = {Proceedings of the Tenth Anniversary Conference on Participatory Design 2008},
+pages = {92–101},
+numpages = {10},
+keywords = {design, object, participation, public, thing, use},
+location = {Bloomington, Indiana},
+series = {PDC '08}
+}
+
+@article{davis1989perceived,
+  title={Perceived usefulness, perceived ease of use, and user acceptance of information technology},
+  author={Davis, Fred D},
+  journal={MIS quarterly},
+  volume={13},
+  number = {3},
+  pages={319--340},
+  year={1989},
+  publisher={JSTOR},
+  doi={10.2307/249008},
+  url={https://www.jstor.org/stable/249008}
+}
+
+@inproceedings{satchell-beyond-user:2009,
+author = {Satchell, Christine and Dourish, Paul},
+title = {Beyond the user: use and non-use in HCI},
+year = {2009},
+isbn = {9781605588544},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/1738826.1738829},
+doi = {10.1145/1738826.1738829},
+abstract = {For many, an interest in Human-Computer Interaction is equivalent to an interest in usability. However, using computers is only one way of relating to them, and only one topic from which we can learn about interactions between people and technology. Here, we focus on not using computers -- ways not to use them, aspects of not using them, what not using them might mean, and what we might learn by examining non-use as seriously as we examine use.},
+booktitle = {Proceedings of the 21st Annual Conference of the Australian Computer-Human Interaction Special Interest Group: Design: Open 24/7},
+pages = {9–16},
+numpages = {8},
+keywords = {non-use, non-users, users},
+location = {Melbourne, Australia},
+series = {OZCHI '09}
+}
+
+@inproceedings{schaadhardt-blind-artboards:2021,
+author = {Schaadhardt, Anastasia and Hiniker, Alexis and Wobbrock, Jacob O.},
+title = {Understanding Blind Screen-Reader Users' Experiences of Digital Artboards},
+year = {2021},
+isbn = {9781450380966},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3411764.3445242},
+doi = {10.1145/3411764.3445242},
+abstract = {Two-dimensional canvases are the core components of many digital productivity and creativity tools, with “artboards” containing objects rather than pixels. Unfortunately, the contents of artboards remain largely inaccessible to blind users relying on screen-readers, but the precise problems are not well understood. This study sought to understand how blind screen-reader users interact with artboards. Specifically, we conducted contextual interviews, observations, and task-based usability studies with 15 blind participants to understand their experiences of artboards found in Microsoft PowerPoint, Apple Keynote, and Google Slides. Participants expressed that the inaccessibility of these artboards contributes to significant educational and professional barriers. We found that the key problems faced were: (1) high cognitive loads from a lack of feedback about artboard contents and object state; (2) difficulty determining relationships among artboard objects; and (3) constant uncertainty about whether object manipulations were successful. We offer design remedies that improve feedback for object state, relationships, and manipulations.},
+booktitle = {Proceedings of the 2021 CHI Conference on Human Factors in Computing Systems},
+articleno = {270},
+numpages = {19},
+keywords = {usability, creativity applications, blind and low-vision users., art and design programs, accessibility, Computers and creativity},
+location = {Yokohama, Japan},
+series = {CHI '21}
+}
