updated data gathering

--- a/references.bib
+++ b/references.bib
@@ -666,3 +666,53 @@ keywords = {usability, creativity applications, blind and low-vision users., art
 location = {Yokohama, Japan},
 series = {CHI '21}
 }
+
+@inproceedings{mastrianni-remote:2021,
+author = {Mastrianni, Angela and Kulp, Leah and Sarcevic, Aleksandra},
+title = {Transitioning to Remote User-Centered Design Activities in the Emergency Medical Field During a Pandemic},
+year = {2021},
+isbn = {9781450380959},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3411763.3443444},
+doi = {10.1145/3411763.3443444},
+abstract = {During the COVID-19 pandemic, we had to transition our user-centered research and design activities in the emergency medical domain of trauma resuscitation from in-person settings to online environments. This transition required that we replicate the in-person interactions remotely while maintaining the critical social connection and the exchange of ideas with medical providers. In this paper, we describe how we designed and conducted four user-centered design activities from our homes: participatory design workshops, near-live simulation sessions, usability evaluation sessions, and interviews and design walkthroughs. We discuss the differences we observed in our interactions with participants in remote sessions, as well as the differences in the interactions among the research team members. From this experience, we draw several lessons and outline the best practices for remotely conducting user-centered design activities that have been traditionally held in person.},
+booktitle = {Extended Abstracts of the 2021 CHI Conference on Human Factors in Computing Systems},
+articleno = {41},
+numpages = {8},
+keywords = {Remote testing, near-live simulations, participatory design, usability evaluations, usability testing},
+location = {Yokohama, Japan},
+series = {CHI EA '21}
+}
+
+@inproceedings{putnam-sus-children:2020,
+author = {Putnam, Cynthia and Puthenmadom, Melisa and Cuerdo, Marjorie Ann and Wang, Wanshu and Paul, Nathaniel},
+title = {Adaptation of the System Usability Scale for User Testing with Children},
+year = {2020},
+isbn = {9781450368193},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3334480.3382840},
+doi = {10.1145/3334480.3382840},
+abstract = {In this paper, we describe a pilot study in which we adapted and tested the System Usability Scales (SUS) for children between ages of 7-11. We began the study with interviews with four elementary school teachers in which we asked their help with modifying the SUS usability statements for children. We then tested those questionnaire statements with 30 children after they completed puzzles in mobile apps; we assessed the statements' understandability, dimensionality, construct validity and reliability. Our adapted SUS statements were mostly understandable. A Principal Component Analysis resulted in a four-Component model; two of those components were established as reliable. However, we were only able to support construct validity for four questionnaire statements (and none of the four Components). This pilot study contributes to the knowledgebase of user testing with children.},
+booktitle = {Extended Abstracts of the 2020 CHI Conference on Human Factors in Computing Systems},
+pages = {1–7},
+numpages = {7},
+keywords = {mobile, system usability scale, testing with children},
+location = {Honolulu, HI, USA},
+series = {CHI EA '20}
+}
+
+@article{mancini-aci:2017,
+title = {Animal-Computer Interaction: The emergence of a discipline},
+journal = {International Journal of Human-Computer Studies},
+volume = {98},
+pages = {129-134},
+year = {2017},
+issn = {1071-5819},
+doi = {https://doi.org/10.1016/j.ijhcs.2016.10.003},
+url = {https://www.sciencedirect.com/science/article/pii/S1071581916301355},
+author = {Clara Mancini and Shaun Lawson and Oskar Juhlin},
+keywords = {Animal-Computer Interaction, Human-animal relations, Animal-centred design, More-than-human participatory research},
+abstract = {In this editorial to the IJHCS Special Issue on Animal-Computer Interaction (ACI), we provide an overview of the state-of-the-art in this emerging field, outlining the main scientific interests of its developing community, in a broader cultural context of evolving human-animal relations. We summarise the core aims proposed for the development of ACI as a discipline, discussing the challenges these pose and how ACI researchers are trying to address them. We then introduce the contributions to the Special Issue, showing how they illustrate some of the key issues that characterise the current state-of-the-art in ACI, and finally reflect on how the journey ahead towards developing an ACI discipline could be undertaken.}
+}
